Scaffolded Units controller

--- a/Views/Buildings/BuildingsList.cshtml
+++ b/Views/Buildings/BuildingsList.cshtml
@@ -1,14 +1,14 @@
 ﻿@model IEnumerable<RPM_Tool.Models.Building>
 
 @{
-    ViewData["Title"] = "BuildingdsList";
+    ViewData["Title"] = "BuildingsList";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>BuildingdsList</h1>
+<h1>BuildingsList</h1>
 
 <p>
-    <a asp-action="Create">Add Building</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
