--- a/Views/Buildings/BuildingsList.cshtml
+++ b/Views/Buildings/BuildingsList.cshtml
@@ -5,34 +5,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>BuildingsList</h1>
+<h1>Portfolio</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add Building</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LandlordId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UnitId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.BuildingVendorId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MortgageEscrowId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.BuildingUtilityId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ScheduledMaintenanceId)
             </th>
             <th></th>
         </tr>
@@ -42,24 +24,6 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LandlordId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UnitId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BuildingVendorId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MortgageEscrowId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BuildingUtilityId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScheduledMaintenanceId)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
