Included redirect in OnPostAsync method in Register.cshtml.cs for signed in users.

--- a/Views/Landlords/Index.cshtml
+++ b/Views/Landlords/Index.cshtml
@@ -6,7 +6,7 @@
     }
 
     <h1>Index</h1>
-    <div>@Html.ActionLink("New Building","CreateBuilding","Landlords")</div>
+    <div>@Html.ActionLink("New Building","Create","Buildings")</div>
  
     <table class="table">
         <thead>
