--- a/Views/Units/Create.cshtml
+++ b/Views/Units/Create.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    IDictionary<string, string> routeData = new Dictionary<string, string>();
+    routeData.Add("buildingId", ViewData["BuildingId"].ToString());
 }
 
 <h1>Create</h1>
@@ -11,8 +13,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="Create" asp-all-route-data="routeData">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>            
             <div class="form-group">
                 <label asp-for="RentAmount" class="control-label"></label>
                 <input asp-for="RentAmount" class="form-control" />
