Solidified implementation for Tenant24HrNotice method in Landlords controller for landlord to send SMS to tenant.

--- a/Views/Tenants/Index.cshtml
+++ b/Views/Tenants/Index.cshtml
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Tenant24HrNotice" asp-controller="Landlords"  asp-route-id="@item.Id">Send 24hr Notice</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
