--- a/Views/Buildings/BuildingsList.cshtml
+++ b/Views/Buildings/BuildingsList.cshtml
@@ -28,7 +28,8 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
+                <a asp-action="Index" asp-controller="Tenants" asp-route-id="@item.Id">View Tenants</a>
             </td>
         </tr>
 }
