--- a/Views/Tenants/Details.cshtml
+++ b/Views/Tenants/Details.cshtml
@@ -39,5 +39,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="MaintenanceRequest" asp-route-id="@Model.Id">Maintenance Request</a> 
+    <a asp-action="MaintenanceRequest" asp-route-id="@Model.Id">Send Maintenance Request</a> 
 </div>
