--- a/Views/Buildings/Details.cshtml
+++ b/Views/Buildings/Details.cshtml
@@ -34,5 +34,6 @@
 }
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="AddScheduledMaintenanceItem" asp-route-id="@Model.Id">Add Maintenance Item</a> |
     <a asp-action="Index">Back to List</a>
 </div>
