--- a/Views/Buildings/BuildingsList.cshtml
+++ b/Views/Buildings/BuildingsList.cshtml
@@ -6,10 +6,43 @@
 }
 
 <h1>Portfolio</h1>
-
 <p>
     <a asp-action="Create">Add Building</a>
 </p>
+<head>
+    <!--Load the AJAX API-->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+        // Load the Visualization API and the corechart package.
+        google.charts.load('current', { 'packages': ['corechart'] });
+        // Set a callback to run when the Google Visualization API is loaded.
+        google.charts.setOnLoadCallback(drawChart);
+        // Callback that creates and populates a data table,
+        // instantiates the pie chart, passes in the data and
+        // draws it.
+        function drawChart() {
+            // Create the data table.
+            var data = new google.visualization.DataTable();
+            data.addColumn('string', 'Money category');
+            data.addColumn('number', 'Amount of money');
+            data.addRows([
+                ['Bill Money', @Model.],
+                ['Budget Item Money', @Model.],
+                ['Debt Item Money', @Model.],
+                ['Goal Item Money', @Model.],
+                ['Random Expense Money', @Model.]
+            ]);
+            // Set chart options
+            var options = {
+                'title': 'Spending',
+                chartArea: {left:0, width:"95%", height:"95%"}
+            };
+            // Instantiate and draw our chart, passing in some options.
+            var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+            chart.draw(data, options);
+        }
+    </script>
+</head>
 <table class="table">
     <thead>
         <tr>
