--- a/Views/Buildings/BuildingsList.cshtml
+++ b/Views/Buildings/BuildingsList.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<RPM_Tool.Models.Building>
+﻿@*@model IEnumerable<RPM_Tool.Models.Building>*@
+@model RPM_Tool.ViewModel.LandlordHomeViewModel
 
 @{
     ViewData["Title"] = "BuildingsList";
@@ -9,32 +10,57 @@
 <p>
     <a asp-action="Create">Add Building</a>
 </p>
-<head>
+<div id="chart_div"></div>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @*@Html.DisplayNameFor(model => model.Name)*@
+                Buildings
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Buildings) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.BuildingId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.BuildingId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.BuildingId">Delete</a> |
+                <a asp-action="Index" asp-controller="Tenants" asp-route-id="@item.BuildingId">View Tenants</a>
+            </td>
+        </tr>
+        }
+    </tbody>
+</table>
+
+@section Scripts {
     <!--Load the AJAX API-->
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
         // Load the Visualization API and the corechart package.
+        // url article
         google.charts.load('current', { 'packages': ['corechart'] });
         // Set a callback to run when the Google Visualization API is loaded.
         google.charts.setOnLoadCallback(drawChart);
-        // Callback that creates and populates a data table,
-        // instantiates the pie chart, passes in the data and
-        // draws it.
+
         function drawChart() {
             // Create the data table.
             var data = new google.visualization.DataTable();
-            data.addColumn('string', 'Money category');
-            data.addColumn('number', 'Amount of money');
+            data.addColumn('string', '');
+            data.addColumn('number', '');
             data.addRows([
-                ['Bill Money', @Model.],
-                ['Budget Item Money', @Model.],
-                ['Debt Item Money', @Model.],
-                ['Goal Item Money', @Model.],
-                ['Random Expense Money', @Model.]
+                ['Mortgage and Escrow', @Model.TotalMortgage],
+                ['Vendors', @Model.TotalVendor],
+                ['Utilities', @Model.TotalUtility]
             ]);
             // Set chart options
             var options = {
-                'title': 'Spending',
+                'title': '',
                 chartArea: {left:0, width:"95%", height:"95%"}
             };
             // Instantiate and draw our chart, passing in some options.
@@ -42,29 +68,4 @@
             chart.draw(data, options);
         }
     </script>
-</head>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                <a asp-action="Index" asp-controller="Tenants" asp-route-id="@item.Id">View Tenants</a>
-            </td>
-        </tr>
 }
-    </tbody>
-</table>
