--- a/Views/Buildings/Details.cshtml
+++ b/Views/Buildings/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
     IDictionary<string, string> routeData = new Dictionary<string, string>();
-    routeData.Add("buildingId", Model.Id.ToString());
+    routeData.Add("buildingId", Model.BuildingId.ToString());
 }
 
 <h1>Details</h1>
@@ -25,7 +25,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="AddScheduledMaintenanceItem" asp-route-id="@Model.Id">Add Maintenance Item</a> 
+    <a asp-action="AddScheduledMaintenanceItem" asp-route-id="@Model.BuildingId">Add Maintenance Item</a> 
 </div>
 <h1>Units</h1>
 <div>Unit # / Rent Amount</div>
@@ -36,6 +36,6 @@
     </p>
 }
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.BuildingId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
