--- a/Views/Buildings/ScheduledMaintenanceByBuilding.cshtml
+++ b/Views/Buildings/ScheduledMaintenanceByBuilding.cshtml
@@ -32,9 +32,9 @@
                 @Html.DisplayFor(modelItem => item.ScheduledTime)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ScheduledMaintenanceId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.ScheduledMaintenanceId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.ScheduledMaintenanceId">Delete</a>
             </td>
         </tr>
 }
